fixed the Links and buttons

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,9 +15,17 @@
         android:usesCleartextTraffic="true">
         <activity android:name=".supplier.SupplierNewActivity"></activity>
         <activity android:name=".supplier.SupplierDetailActivity" />
+
         <activity android:name=".product.ProductEditActivity" />
         <activity android:name=".product.ProductNewActivity" />
-        <activity android:name=".product.ProductSuppliersListActivity" />
+        <activity android:name=".product.ProductListActivity"/>
+        <activity android:name=".product.ProductSuppliersListActivity" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".product.ProductListActivity" />
+
+
+        </activity>
         <activity android:name=".booking.BookingDetailActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
